k8s/ingress/backen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: <ALB_SG_ID> # Use Terraform output alb_sg_id
spec:
  rules:
    - http:
        paths:
          - path: /api/auth*
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5005
          - path: /api/products*
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5001
          - path: /api/cart*
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 5002
          - path: /api/orders*
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5003
          - path: /api/payments*
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5004
          - path: /api/email*
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 5006
