k8s/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing       # Make ALB public
    alb.ingress.kubernetes.io/target-type: ip              # Use IP mode for Fargate pods
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # Open HTTP 80
    alb.ingress.kubernetes.io/healthcheck-path: /health    # Health check path
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/security-groups: "<ALB_SG_ID>" # Replace with your ALB SG
spec:
  serviceAccountName: product-service-account
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5005
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5001
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 5002
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5003
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5004
          - path: /api/email
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 5006
